--- a/src/css/LoginForm.scss
+++ b/src/css/LoginForm.scss
@@ -2,6 +2,7 @@ form {
   text-align: center;
   label {
     display: block;
+    text-align: left;
     input{
       display: block;
       margin: auto;
